# bazel-fe

./: Cargo.toml  README.md  build.rs
.github/ci_scripts/: prepare_output.sh
.github/workflows/: release.yml
bazelfe-core/: Cargo.toml
bazelfe-core/src/: app.rs  bin.rs  lib.rs  ui.rs
bazelfe-protos/: Cargo.toml
example_bazel_project/: bazel-bin  bazel-example_bazel_project  bazel-out  bazel-testlogs
example_bazel_project/tools/: bazel_fe_common.sh
src/: app.rs  bin.rs  event.rs  lib.rs  main.rs  parse_imports.rs  protos.rs  scala_parser_app.rs  ui.rs
src/bazel_runner/: action_event_stream.rs  bazel_runner_app.rs  expand_target_to_guesses.rs  mod.rs  process_build_abort_errors.rs  process_missing_dependency_errors.rs  sanitization_tools.rs
src/build_events/: build_event_server.rs  build_events_app.rs  error_type_extractor.rs  hydrated_stream.rs  mod.rs
src/buildozer_driver/: buildozer_driver_app.rs  mod.rs
src/error_extraction/: mod.rs
src/error_extraction/java/: error_cannot_find_symbol.rs  error_package_does_not_exist.rs  mod.rs
src/error_extraction/scala/: error_is_not_a_member_of_package.rs  error_object_not_found.rs  error_symbol_is_missing_from_classpath.rs  error_symbol_type_missing_from_classpath.rs  error_type_not_found.rs  error_value_not_found.rs  (+3 more)
src/index_table/: load_index_table_app.rs  mod.rs
src/jvm_indexer/: bazel_query.rs  indexer_action_event_stream.rs  jvm_indexer_app.rs  mod.rs  popularity_parser.rs  popularity_parser_app.rs
src/scala/: mod.rs  parse_imports.rs  scala_parser_app.rs
src/source_dependencies/: mod.rs
(+10 files in other folders)
