[package]
name = "bazel-fe"
version = "0.1.0"
authors = ["Ian O'Connell <ianoc@ianoc.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.10.0"
termion = "1.5.5"
rand = "0.7.3"
argh = "0.1.3"
nom = "5.1.2"
clap = "3.0.0-beta.2"


[lib]
name = "bazelfe"
path = "src/lib.rs"


[[bin]]
name = "bazel-fe-bin"
path = "src/bin.rs"


[[bin]]
name = "scala-parser"
path = "src/scala_parser_app.rs"
